Fix text alignment in about me paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -354,8 +354,9 @@ a {
     font-size: 1.8rem;
     font-style: italic;
     font-weight: 300;
-    letter-spacing: .2rem;
+    /* letter-spacing: .1rem; */
     margin-bottom: 5rem;
+    text-align: justify;
 }
 
 #thinkful {
